--- a/graphics/ErsatzDiagramm1/document.tex
+++ b/graphics/ErsatzDiagramm1/document.tex
@@ -1,21 +1,40 @@
 \documentclass{standalone}
+
+\usepackage{tikz}
 \usepackage[europeanresistors]{circuitikz}
+\usetikzlibrary{arrows.meta}
+\usetikzlibrary{calc}
+
 \begin{document}
 
-    \begin{circuitikz}
-        % Left and right vertical lines
-        \draw (0,0) -- (0,2);
-        \draw (3,0) -- (3,2);
+\begin{circuitikz}[scale=0.7, transform shape]
+% top conductor
+\draw[{Circle[open]}-{Circle[open]}] (0,7) -- (8,7);
 
-        % Top horizontal line with resistor
-        \draw (0,1) -- (1,1)
-        to[R, l=R] (2,1)
-        -- (3,1);
+%bottom conductor
+\draw[{Circle[open]}-{Circle[open]}] (0,5) -- (8,5);
 
-        % Bottom horizontal line with capacitor
-        \draw (0,0) -- (1,0)
-        to[C, l=C] (2,0)
-        -- (3,0);
-    \end{circuitikz}
+%left verical line
+\draw[dashed] (2,-1) -- (2,8);
+
+%right verical line
+\draw[dashed] (6,-1) -- (6,8);
+
+\draw[Stealth-Stealth] (2, 4.25) -- (6, 4.25) node[pos=0.5, circle, fill=white] {d$x$};
+
+% resistor
+\draw[{Circle[open, fill=white]}-] ($(2,3) - (2pt,0)$) -- (3,3);
+\draw[-{Circle[open, fill=white]}] (5,3) -- ($(6,3) + (1.5pt,0)$);
+% Resistor (no arrow)
+\draw (3,3) to[R, l=$R_{x}$, fill=black] (5,3);
+
+
+% capacitor
+\draw[{Circle[open, fill=white]}-{Circle[open, fill=white]}] ($(2,0) - (2pt,0)$) -- ($(6,0) + (2pt,0)$);
+\draw[{Circle[open, fill=black]}-] ($(3,3) + (0, 2pt)$) -- (3,2);
+\draw[-{Circle[open, fill=black]}] (3,1) -- ($(3,0) - (0, 1.5pt)$);
+\draw (3,2) to[C, l=$C_{x}$] (3,1);
+
+\end{circuitikz}
 
 \end{document}
