--- a/graphics/ElektrischeFeldLinien/document.tex
+++ b/graphics/ElektrischeFeldLinien/document.tex
@@ -10,7 +10,7 @@
 \begin{document}
 
 
-\begin{tikzpicture}[scale=0.8, transform shape]
+\begin{tikzpicture}
 
 % Define styles
 \tikzset{
@@ -22,10 +22,8 @@
 
 
 % zeige den Teil, der durch die Graphik benutzt wird
-\useasboundingbox (5.5,2) rectangle (15,8);
+\useasboundingbox (2.75,2) rectangle (7.75,7);
 
-
-\begin{scope}[xscale=2]
 
 % grind lines
 %\draw[help lines, dashed] grid (10,10);
@@ -34,7 +32,7 @@
 \coordinate (A1) at (5,3);
 
 %position of top wire
-\coordinate (A2) at (5,7);
+\coordinate (A2) at (5,6);
 
 % Negative charge node
 \node[draw=orange, fill=orange!10, circle] (NEG) at (A1) {$\boldsymbol{-}$};
@@ -76,9 +74,7 @@ angle=-135);
 
 
 % Electric field label
-\node at (7.25,5) {\large \textbf{E}};
-
-\end{scope}
+\node at (7.5,5) {\large \textbf{E}};
 
 \end{tikzpicture}
 
