--- a/Ausarbeitung/document.tex
+++ b/Ausarbeitung/document.tex
@@ -390,22 +390,23 @@ Frequenzkomponenten und betrachtet diese zunächst getrennt.
 Wir stellen Strom und Spannung mittels sogenannter Phasoren $\underline{I}$ und $\underline{U}$ dar, um hervorzuheben,
 dass es sich um komplexe Größen handelt:
 \begin{align*}
-    i(x, t) &= \mathrm{Re} \left( \underline{I}(x) \exp(j \omega t) \right) \\
-    u(x, t) &= \mathrm{Re} \left( \underline{U}(x) \exp(j \omega t) \right)
+    i(x, t) &= \mathrm{Re} \left( \underline{I}(x) \exp(\mathrm{j} \omega t) \right) \\
+    u(x, t) &= \mathrm{Re} \left( \underline{U}(x) \exp(\mathrm{j} \omega t) \right)
 \end{align*}
 mit $\omega = 2 \pi f$. Es handelt sich hierbei um stationäre sin-förmige Signale, bei denen Ort- und Zeitabhängigkeit
 entkoppelt sind.
 
 Das Einsetzen der Phasoren in die Gleichungen \eqref{eq:Dgl1} und \eqref{eq:Dgl2} liefert
 \begin{align}
-    \frac{\text{d} \underline{U}}{\text{d} x} &= - \left( R^{\prime} + j \omega L^{\prime} \right)
+    \frac{\text{d} \underline{U}}{\text{d} x} &= - \left( R^{\prime} + \mathrm{j} \omega L^{\prime} \right)
     \underline{I} \label{eq:ResDgl1} \\[1ex]
-    \frac{\text{d} \underline{I}}{\text{d} x} &= - \left( G^{\prime} + j \omega C^{\prime} \right) \underline{U}
+    \frac{\text{d} \underline{I}}{\text{d} x} &= - \left( G^{\prime} + \mathrm{j} \omega C^{\prime} \right)
+    \underline{U}
 \end{align}
 Wir eliminieren $\underline{I}$ aus \eqref{eq:ResDgl1} durch nochmaliges Ableiten der Gleichung nach $x$:
 \begin{align}
-    \frac{\text{d}^{2} \underline{U}}{\text{d} x^{2}} &= \left( R^{\prime} + j \omega L^{\prime} \right)
-    \left( G^{\prime} + j \omega C^{\prime} \right) \underline{U} \label{eq:ResDgl3}.
+    \frac{\text{d}^{2} \underline{U}}{\text{d} x^{2}} &= \left( R^{\prime} + \mathrm{j} \omega L^{\prime} \right)
+    \left( G^{\prime} + \mathrm{j} \omega C^{\prime} \right) \underline{U} \label{eq:ResDgl3}.
 \end{align}
 Verglichen mit \eqref{eq:Tele1} entfällt in \eqref{eq:ResDgl3} die Zeitabhängigkeit. Damit haben wir eine gewöhnliche
 Differentialgleichung 2.~Ordnung mit konstanten Koeffizienten, wir wir sie in Abschnitt~\ref{VerlustlosesModel} bereits
@@ -413,14 +414,15 @@ begegnet sind.
 
 Für den Phasor $\underline{I}$ erhalten wir mit ähnlichen Argumenten
 \begin{align}
-    \frac{\text{d}^{2} \underline{I}}{\text{d} x^{2}} &= \left( R^{\prime} + j \omega L^{\prime} \right)
-    \left( G^{\prime} + j \omega C^{\prime} \right) \underline{I}.
+    \frac{\text{d}^{2} \underline{I}}{\text{d} x^{2}} &= \left( R^{\prime} + \mathrm{j} \omega L^{\prime} \right)
+    \left( G^{\prime} + \mathrm{j} \omega C^{\prime} \right) \underline{I}.
 \end{align}
 Dies sind die Wellengleichungen der verlustbehafteten Leitung. Sie werden in der Regel wie folgt geschrieben:
 \begin{align}
-    \frac{\text{d}^{2} \underline{U}}{\text{d} x^{2}} &= \gamma^{2} \underline{U} \\[1ex]
-    \frac{\text{d}^{2} \underline{I}}{\text{d} x^{2}} &= \gamma^{2} \underline{I} \\[1ex]
-    \gamma^{2} &= \left( R^{\prime} + j \omega L^{\prime} \right) \left( G^{\prime} + j \omega C^{\prime} \right).
+    \frac{\text{d}^{2} \underline{U}}{\text{d} x^{2}} &= \gamma^{2} \underline{U} \label{eq:VerlustDgl1} \\[1ex]
+    \frac{\text{d}^{2} \underline{I}}{\text{d} x^{2}} &= \gamma^{2} \underline{I} \label{eq:VerlustDgl2} \\[1ex]
+    \gamma^{2} &= \left( R^{\prime} + \mathrm{j} \omega L^{\prime} \right) \left( G^{\prime} + \mathrm{j} \omega
+    C^{\prime} \right).
 \end{align}
 Man nennt $\gamma$ die Wellenausbreitungsgeschwindigkeit. Verglichen zum verlustlosen Model ist dies eine komplexe
 Größe, was dazu führt, dass im verlustbehafteten Fall ein Dämpfungsterm in der Lösung auftritt.
@@ -435,7 +437,7 @@ Es gilt somit für die Spannung
 \end{equation}
 Die Gleichung für den Strom erhalten wir, wenn wir \eqref{eq:VerlustU} in \eqref{eq:ResDgl1} einsetzen,
 \begin{equation}
-    \underline{I}(x) = \frac{-1}{R^{\prime} + j \omega L^{\prime}} \frac{\text{d} \underline{U}}{\text{d} x}
+    \underline{I}(x) = \frac{-1}{R^{\prime} + \mathrm{j} \omega L^{\prime}} \frac{\text{d} \underline{U}}{\text{d} x}
     = \frac{1}{Z}
     \left(
     \vphantom{\sqrt{1}{Z}}
@@ -443,7 +445,7 @@ Die Gleichung für den Strom erhalten wir, wenn wir \eqref{eq:VerlustU} in \eqre
 \end{equation}
 wobei wir
 \begin{equation}
-    Z = \sqrt{\frac{G^{\prime} + j \omega C^{\prime}}{R^{\prime} + j \omega L^{\prime}}}
+    Z = \sqrt{\frac{G^{\prime} + \mathrm{j} \omega C^{\prime}}{R^{\prime} + \mathrm{j} \omega L^{\prime}}}
 \end{equation}
 eingeführt haben. $Z$ hat die Dimension eines Widerstandes und wird daher Wellenwiderstand oder Wellenimpedanz
 genannt.
@@ -473,12 +475,91 @@ Damit lauten die Gleichungen für Spannung und Strom entlang der Leitung
 \end{align}
 
 
+Um die Wellenausbreitung entlang des Leiters besser verstehen zu können, spalten wir zunächst die
+Wellenausbreitungsgeschwindigkeit $\gamma$ auf in Real- und Imaginärteil:
+\[ \gamma = \alpha + \mathrm{j} \beta. \] Wir nennen $\alpha$ die Dämpfungskonstante (oder -belag) und $\beta$ die
+Phasenkonstante (oder-belag). Für die Spannung gilt dann
+\begin{align}
+u(x, t) &= \mathrm{Re} \left[ \underline{U}(x) \mathrm{e}^{\mathrm{j} \omega t} \right] \\[1ex]
+&= \mathrm{Re} \left[
+\frac{1}{2} \left( \underline{U}_{a} + Z_{w} \underline{I}_{a} \right) \mathrm{e}^{- \alpha x}
+\mathrm{e}^{- \mathrm{j} \beta x} \mathrm{e}^{\mathrm{j} \omega t}
++
+\frac{1}{2} \left( \underline{U}_{a} - Z_{w} \underline{I}_{a} \right) \mathrm{e}^{\alpha x}
+\mathrm{e}^{\mathrm{j} \beta x} \mathrm{e}^{\mathrm{j} \omega t}
+\right].
+\end{align}
+Wir führen die Abkürzungen
+\begin{align*}
+\frac{1}{2} \left( \underline{U}_{a} + Z_{w} \underline{I}_{a} \right) &= \hat{U}_{1} \mathrm{e}^{\mathrm{j} \psi_{1}}
+\\[1ex]
+\frac{1}{2} \left( \underline{U}_{a} - Z_{w} \underline{I}_{a} \right) &= \hat{U}_{2} \mathrm{e}^{\mathrm{j} \psi_{2}}
+\end{align*}
+ein, mit denen für die Spannung folgt
+\begin{equation}
+u(x,t) =
+\hat{U}_{1} \mathrm{e}^{- \alpha x} \cos \left( \omega t - \beta x + \psi_{1} \right)
++
+\hat{U}_{2} \mathrm{e}^{\alpha x} \cos \left( \omega t + \beta x + \psi_{2} \right).
+\end{equation}
+Die Spannung setzt sich also aus zwei Einzelspannungen zusammen. Der Faktor $\exp(-\alpha x)$ bewirkt ein
+exponentiellen Abfall der Teilspannung entlang der positiven $x$-Achse. Für die zweite Teilspannung bewirkt
+$\exp(\alpha x)$ einen exponentiellen Abfall in die negative $x$-Richtung der Amplitude.
+
+\subsubsection{Wellenlänge}
+
+Für einen festen Zeitpunkt $t$ oszilliert jede der Teilspannungen entlang der $x$-Richtung, da das Argument des Kosinus
+von $x$ abhängt. Für die Periode der Welle gilt gilt \[ \beta z = 2 \pi, \] und somit
+\[ x = \lambda = \frac{2 \pi}{\beta}, \] die Wellenlänge der Schwingung. Die ist exemplarisch auf
+Abbildung\ref{ExpWelle} gezeigt.
+\begin{figure}[!htpb]
+    \begin{center}
+        \input{../graphics/ExpWelle/document}
+        \caption{Einschaltbild eines infinitesimalen Leitungsstücks einer verlustbehafteten Leitung. Entnommen
+            aus~\cite{LeitungenUndFilter}.}
+        \label{ExpWelle}
+    \end{center}
+\end{figure}
+
+
+\subsubsection{Wellengeschwindigkeit}
+
+Um die Wellengeschwindigkeit zu bestimmen, betrachten wir einen Nulldurchgang einer Teilspannung zum Zeitpunkt
+$t=t_{0}$, bei dem das Argument des Kosinus $\frac{\pi}{2}$ sei. Es gilt
+\[ x_{0} = \frac{\omega t_{0} + \psi_{1} -\frac{\pi}{2}}{\beta} \]. Nach der Zeit $t_{1} = t_{0} + \Delta t$ sei der
+folgende Nulldurchgang erreicht, für den gilt
+\[ x_{1} = \frac{\omega t_{1} + \psi_{1} -\frac{\pi}{2}}{\beta} \]. Für die Phasengeschwindigkeit der Welle gilt somit
+\[ v = \frac{x_{1} - x_{0}}{t_{1} - t_{0}} = \frac{\omega}{\beta}. \]
+
+Zwar haben wir hier nur Spannungen untersucht, aber aufgrund der Symmetrie der Gleichungen~\eqref{eq:VerlustDgl1} und
+\eqref{eq:VerlustDgl2} unterscheidet sich die Gleichung für den Teilstrom nur um den Faktor von der der Teilspannung.
+Die Leitungsgleichungen für Strom und Spannung setzen sich aus jeweils zwei Exponentialtermen zusammen, die sich
+entlang des Leiters als gedämpfte Wellen in entgegengesetzter Richtung ausbreiten,
+\begin{alignat}{2}
+\underline{U}_(x) &= \underline{U}_{1} \mathrm{e}^{- \gamma x} + \underline{U}_{2} \mathrm{e}^{\gamma x}
+&= \underline{U}_{v} + \underline{U}_{r} \\[1ex]
+\underline{I}_(x) &= \underline{I}_{1} \mathrm{e}^{- \gamma x} + \underline{I}_{2} \mathrm{e}^{\gamma x}
+&= \underline{I}_{v} + \underline{I}_{r}.
+\end{alignat}
+
 
 \section{Abschlüsse}
 
 
-%\bibliographystyle{plain} % oder ein anderer Stil, z.B. alpha, abbrv, unsrt
-%\bibliography{Proseminar} % Name Ihrer .bib-Datei OHNE Endung .bib
+
+\begin{figure}[!htpb]
+    \begin{center}
+        \input{../graphics/ImaginaerWelle/document}
+        \caption{Einschaltbild eines infinitesimalen Leitungsstücks einer verlustbehafteten Leitung. Entnommen
+            aus~\cite{LeitungenUndFilter}.}
+        \label{ImaginaerWelle}
+    \end{center}
+\end{figure}
+
+
+
+
+
 \printbibliography
 
 \end{document}
