--- a/graphics/ExpWelle/document.tex
+++ b/graphics/ExpWelle/document.tex
@@ -13,7 +13,8 @@
 
 \begin{tikzpicture}
 
-\pgfplotsset{xmin=0, xmax=25, ymin=-1.25, ymax=1.25,
+\pgfplotsset{
+    xmin=0, xmax=25, ymin=-1.25, ymax=1.25,
     axis x line=center,
     axis y line=left,
     xlabel=$x$,
@@ -22,13 +23,14 @@
     xlabel style={at={(axis description cs:1,0.45)},anchor=north},
     xtick={0},
     yticklabels={},
+    height=8cm,
     % scale y
-%    y=1cm
+%    y=5cm
 }
 
 
 \begin{groupplot}[group style={group size=1 by 2,
-horizontal sep=1cm,
+horizontal sep=0cm,
 vertical sep=1cm}]
 
 \nextgroupplot[]
